src/app/components/experience/experience.component.scss
.experience {
  background-color: white;
  transform: translateZ(0);

  .container {
    .step-line {
      width: 40px;
      height: 1px;
      margin-top: 31px;
      opacity: 0.4;
      flex-shrink: 0;

      @media(max-width: 992px) {
        width: 16px;
      }
    }

    .steps {
      position: relative;

      @media(min-width: 992px) {
        margin-top: 60px;
      }

      &::after {
        content: "";
        position: absolute;
        width: 6px;
        top: 0;
        bottom: 0;
        left: 50%;
        border: 2px solid #2c3e50;
        border-radius: 5px;
        transform: translateX(-3px);

        @media (max-width: 992px) {
          left: 32px;
        }
      }

      .steps-container {
        display: flex;
        position: relative;
        background-color: inherit;
        width: calc(50% + 32px);
        z-index: 1;

        @media (max-width: 992px) {
          left: 0;
          flex-flow: column-reverse;
          width: auto;

          &:not(:nth-child(1)) {
            margin-top: 40px;
          }

          left: 0;
        }

        @media (min-width: 992px) {
          &:nth-child(even) {
            left: calc(50% - 32px);
            flex-direction: row-reverse;
          }

          &:nth-child(odd) {
            flex-direction: row;
          }
        }

        .content {
          background-color: white;
          position: relative;
          border-radius: 20px;
          box-shadow: 0px 0px 10px #2c3e50;
          overflow: hidden;
          width: 100%;

          .header-container {
            background-color: #2c3e50;
            padding: 16px 32px;
            box-shadow: 0px 0px 10px -2px #2c3e50;
            border-radius: 20px 20px 0px 0px;
            border-top: 1px solid white;
            border-right: 1px solid white;
            border-left: 1px solid white;

            @media(max-width: 992px) {
              padding: 16px;
            }

            h2 {
              font-weight: 600;
              font-size: 16px;
              color: #fff;

              &.subheading {
                margin-bottom: 0;
              }
            }
          }

          .main-content {
            color: #676767;
            font-size: 16px;
            margin-bottom: 0px;
            padding: 22px 32px;
            font-weight: 600;
            letter-spacing: 0.5px;
            background-color: var(--bs-light);
            margin-top: 10px;
            border: 1px solid white;
            border-radius: 0 0 20px 20px;
            box-shadow: 0px -2px 5px -2px;

            @media(max-width: 992px) {
              padding: 16px;
              padding-top: 6px;
            }

            u {
              background-color: #1abc9c;
              color: #f8f9fa;
              padding: 0 5px;
              text-decoration: none;
              margin-right: 5px;
            }

            ul {
              @media(min-width: 992px) {
                -moz-column-count: 2;
                -moz-column-gap: 20px;
                -webkit-column-count: 2;
                -webkit-column-gap: 20px;
                column-count: 2;
              }

              column-gap: 20px;
              list-style-type: none;
              padding-inline-start: 0;


              li {
                background-color: #1abc9c;
                color: #f8f9fa;
                padding: 0 5px;
                text-decoration: none;
                margin-bottom: 5px;
                width: fit-content;
              }
            }
          }
        }

        img.logo {
          height: 62px;
          width: 62px;
          z-index: 3;
          margin-top: 10px;
          border-radius: 50%;
          box-shadow: 0px 0px 5px #2c3e50;
        }

        div.logo {
          height: 62px;
          min-width: 62px;
          z-index: 3;
          margin-top: 10px;
          transform: translateX(2px);
          border-radius: 50%;
          box-shadow: 0px 0px 5px #2c3e50;
          background-image: url(../../../assets/img/companies/rozetka.jfif);
          background-repeat: no-repeat;
          background-position: center;
          background-size: 110%;
          border: 1px solid black;
        }
      }
    }
  }
}

